src/components/Footer/SocialsAndLegal/SocialsAndLegal.scss
@mixin no-margin-padding {
  margin: 0;
  padding: 0;
}

@mixin text {
  font-family: Lato, sans-serif;
  font-size: 10px;
  color: #fff;
}

$spacing-md: 15px;

.socials {
  margin-bottom: $spacing-md;
  text-align: center;

  .sm-icon {
    font-size: 1.84rem;
    margin: 0 .88rem;
    color: white;
  }

  @media (min-width: 800px) {
    text-align: left;
  }
}

.legal {
  @include text;

  display: flex;
  align-items: center;
  justify-content: space-around;

  p, a {
    @include text;
    @include no-margin-padding;
  }

  a, p:not(:last-of-type) {
    @media (min-width: 800px) {
      margin-right: $spacing-md;
    }
  }

  @media (min-width: 800px) {
    justify-content: flex-start;
  }
}

